[project]
name = "api-test-toolkit"
version = "0.1.0"
description = "A YAML-based API testing toolkit for validating HTTP endpoints."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "typer>=0.26.7",
]

[project.scripts]
api-test = "api_test_toolkit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
